--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@ h1 {
     font-size: 3em;
     line-height: 1.2em;
     margin: 0 0 0.4em 0;
+    text-wrap: balance;
 
     /* @media screen and (max-width: 630px) {
         font-size: 2.5em;
